# proof-of-business

./: .gitignore  FLADOV_API_CONTRACT.md  README.md  TECHNICAL_ARCHITECTURE.md  pyproject.toml
app/: __init__.py  __main__.py  main.py  settings.py
app/api/: __init__.py  models.py  routes.py
app/core/: __init__.py
app/core/rank_engine/: __init__.py  config.py  engine.py  exceptions.py  models.py
app/core/rank_engine/evidence/: __init__.py  graph.py
app/core/rank_engine/metrics/: __init__.py  calculator.py  utils.py
app/core/rank_engine/ml/: __init__.py  analyzer.py
app/core/rank_engine/normalization/: __init__.py  pipeline.py
app/core/rank_engine/risk/: __init__.py  detectors.py
app/core/rank_engine/schema/: __init__.py  models.py  validators.py
app/core/rank_engine/scoring/: __init__.py  calculator.py
app/fladov/: __init__.py  contracts.py  demo_data.py  repository.py  routes.py  service.py
app/payments/: __init__.py  api_models.py  models.py  notifications.py  presentation.py  registry.py  routes.py  service.py  store.py
app/payments/providers/: __init__.py  base.py  squad.py
app/reports/: __init__.py  composer.py  models.py  presentation.py  service.py
app/services/: __init__.py
app/static/: app.js  styles.css
app/templates/: base.html  business.html  index.html  report.html
app/ui/: __init__.py
tests/fixtures/: __init__.py  payloads.py
tests/unit/: test_fladov_repository.py  test_payments.py  test_rank_engine.py  test_web_app.py
